--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -176,6 +176,7 @@ BITCOIN_CORE_H = \
   uint256.h \
   undo.h \
   util.h \
+  util/macros.h \
   util/threadnames.h \
   utilstrencodings.h \
   utilmoneystr.h \
