--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -73,6 +73,8 @@ QT_FORMS_UI = \
   qt/forms/togglebutton.ui \
   qt/forms/transactiondescdialog.ui \
   qt/forms/txentry.ui \
+  qt/forms/unlockdialog.ui \
+  qt/forms/lockdialog.ui \
   qt/forms/importorcreate.ui \
   qt/forms/entermnemonics.ui
   
@@ -140,6 +142,8 @@ QT_MOC_CPP = \
   qt/moc_walletframe.cpp \
   qt/moc_walletmodel.cpp \
   qt/moc_walletview.cpp \
+  qt/moc_unlockdialog.cpp \
+  qt/moc_lockdialog.cpp \
   qt/moc_importorcreate.cpp \
   qt/moc_entermnemonics.cpp
 
@@ -236,6 +240,8 @@ BITCOIN_QT_H = \
   qt/walletmodeltransaction.h \
   qt/walletview.h \
   qt/winshutdownmonitor.h \
+  qt/unlockdialog.h \
+  qt/lockdialog.h \
   qt/importorcreate.h \
   qt/entermnemonics.h
 
@@ -384,6 +390,8 @@ BITCOIN_QT_CPP += \
   qt/walletmodel.cpp \
   qt/walletmodeltransaction.cpp \
   qt/walletview.cpp \
+  qt/unlockdialog.cpp \
+  qt/lockdialog.cpp \
   qt/importorcreate.cpp \
   qt/entermnemonics.cpp
 
